--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,7 @@
     border: none;
     background-image: linear-gradient(to right, #DD207F, #E2407B, #E16120, #47A738, #642582, #3C9DE1, #47A738 );
     border-radius: 100px;
+    cursor: pointer;
     padding: .7rem;
     width: 300px;
 }
@@ -27,7 +28,7 @@
     font-family: 'Cutive Mono', monospace;
     font-size: 23px;
     text-decoration: none;
-
+    font-weight: bold;
 }
 
 .main-button:hover {
@@ -39,7 +40,7 @@
 
 #evento-container {
     background-color: #FBEF68;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #evento-container h2 {
@@ -57,6 +58,8 @@
 .evento-card {
     padding: 1rem;
     line-height: 30px;
+    border: solid black 1px;
+    margin: 2rem;
 }
 
 .evento-card h3 {
@@ -108,4 +111,9 @@
     color:whitesmoke;
     font-weight:bold;
     font-family: 'Ubuntu', sans-serif;
+    cursor: pointer;
+}
+
+#footer-container span:hover {
+    transform: scale(1.1);
 }
