--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,11 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+.evento-card img {
+    margin: auto;
+    
+}
+
 /* Localizacao */
 
 #localizacao-container  {
